[package]
name = "yngvi"
version = "0.2.0"
description = "Read, calculate and write weather data"
authors = ["deebloo <dannybluedesign@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/deebloo/yngvi"
documentation = "https://docs.rs/yngvi/0.2.0"

[dependencies]
# standard dependencies
async-trait = "0.1.77"
chrono = { version = "0.4.34", features = ["serde"] }
metrum = { version = "0.5.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

# feature dependencies
tokio = { version = "1.37.0", features = ["full"], optional = true}
dotenv = { version = "0.15.0", optional = true }
hidapi = { version = "2.6.1", optional = true }
reqwest = { version = "0.11.24", optional = true }

[features]
standalone = ["dep:dotenv", "dep:tokio", "display", "influxdb", "rtl_433"]
display = ["dep:hidapi"]
influxdb = ["dep:reqwest"]
rtl_433 = []

[dev-dependencies]
yngvi = { path = ".", features = ["standalone"] }

[lib]
name = "yngvi"

[[bin]]         
name = "yngvi"    
required-features = ["standalone"] 