[package]
name = "yngvi"
version = "0.3.3"
description = "Read, calculate and write weather data"
authors = ["deebloo <dannybluedesign@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/deebloo/yngvi"
documentation = "https://docs.rs/yngvi/0.2.0"

[workspace]
resolver = "2"
members = []

[dependencies]
# standard dependencies
chrono = { version = "0.4.34", features = ["serde"] }
metrum = { version = "1.0.0", features = ["serde"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.115"
reqwest = { version = "0.12.3", features = ["json"] }

# feature dependencies
tokio = { version = "1.37.0", features = ["full"], optional = true}
dotenv = { version = "0.15.0", optional = true }
hidapi = { version = "2.6.1", optional = true }

[features]
standalone = ["dep:dotenv", "dep:tokio", "display", "influxdb", "rtl_433"]
display = ["dep:hidapi"]
influxdb = []
rtl_433 = []

[dev-dependencies]
yngvi = { path = ".", features = ["standalone"] }

[lib]
name = "yngvi"

[[bin]]         
name = "yngvi"    
required-features = ["standalone"] 