[package]
name = "acurite_core"
version = "0.2.0"
authors = ["dblue <dblue@deloitte.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
async-trait = "0.1.51"
chrono = "0.4.19"
serde = "1.0.130"
serde_json = "1.0.72"