[package]
name = "acurite_core"
version = "0.2.0"
authors = ["dblue <dblue@deloitte.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
async-trait = "0.1.52"
chrono = "0.4.19"
serde = "1.0.131"
serde_json = "1.0.73"