[package]
name = "metrum"
description = "Easily work with and compare temeratures in different units"
version = "0.6.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/deebloo/metrum"
documentation = "https://docs.rs/metrum/0.6.1"

[dependencies]
serde = { version = "1.0.197", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde"]

[dev-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115" }
metrum = { path = ".", features = ["serde"] }
